testData/diagnostics/div64_by_minus_one_opt.diag.txt
testData/diagnostics/div64_by_minus_one_opt.nut line = (1) column = (9) : error: too many digits for an Hex number
print( (-0x7FFFFFFF_FFFFFFFF-1) / -1 )
         ^------------------

